# nicknamer

./: .gitignore  .replit  Dockerfile  README.md  base_scutoid.py  gay_str8_alliance_config.yaml  identity_config.py  identity_scutoid.py  kermit_scutoid.py  levi.py  nicknamer.py  pyproject.toml  real_names.yaml  requirements.txt  scutoid.py  util.py
.deploy/: deploy.yml
.github/: dependabot.yml
.github/workflows/: rust-tests.yml
data/: gay_str8_alliance_config.yaml  kermit_config.yaml
rust/src/: main.rs
rust/src/nicknamer/: config.rs  mod.rs
tests/: test_base_scutoid.py  test_bot_commands.py  test_kermit_scutoid.py
